[package]
name = "ferrate"
version = "0.0.3"
authors = ["vedang"]
edition = "2021"
license-file = "LICENSE"
description = "A Rust Math Library"
readme = "CratesREADME.md"
repository = "https://github.com/VLambda/ferrate.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
